--- a/data/styles.css
+++ b/data/styles.css
@@ -13,6 +13,9 @@
 }
 ._图片 {
 }
+.primary_button {
+  color:#FFFFFF;
+}
 ._一级标题 {
   font-family:'ArialMT', 'Arial';
   font-weight:bold;
@@ -62,4 +65,13 @@
   text-align:left;
 }
 ._流程形状 {
+}
+._连接线 {
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+  font-size:10px;
+  color:#333333;
+  text-align:center;
+  line-height:normal;
 }
